# glampy

./: .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  .pylintrc.tests  README.md  devenv.nix  pyproject.toml
.github/workflows/: checks.yml  release.yml
glampy/: __init__.py  io.py  logger.py  logging.py  style.py
tests/: test_logger.py
