[tool.poetry]
name = "glampy"
version = "0.1.0"
description = "Make your python CLI prints and logs simple but glamorous"
authors = ["snaeil <schnegel@posteo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
pdoc = "^14.4.0"
bandit = "^1.7.8"
pylint = "^3.1.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
