[tool.poetry]
name = "glampy"
version = "0.2.12"
description = "Make your python CLI prints and logs simple but glamorous"
authors = ["snaeil <schnegel@posteo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snaeil/glampy"
repository = "https://github.com/snaeil/glampy"
keywords = ["cli", "logging", "styling", "terminal"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
pytest-cov = "^5.0"
mypy = "^1.10"
pdoc = "^14.5"
bandit = "^1.7"
pylint = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/snaeil/glampy/issues"
